[gd_scene load_steps=3 format=3 uid="uid://c12emjq2m64cd"]

[ext_resource type="Script" uid="uid://dnqu8o4cosxo" path="res://actors/weapons/Drill.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cfdu4an6oq1kc" path="res://assets/sprites/weapons/drill.png" id="2"]

[node name="Drill" type="Area2D"]
collision_layer = 128
collision_mask = 3
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(104, 0)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(8, -32, 144, -32, 184, 0, 144, 32, 8, 32)
disabled = true

[node name="Aura" type="Polygon2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.196078)
show_behind_parent = true
polygon = PackedVector2Array(320, 0, 128, 192, -320, 192, -128, 0, -320, -192, 128, -192)

[node name="AuraCollision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-216, -168, 128, -168, 296, 0, 128, 168, -216, 168, -32, 0)
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Drill_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
